Fix layout issues by adjusting body width and updating logo image dimensions for better alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body{
     background: url(../images/bridges.jpeg) no-repeat center center/cover ;
     background-size: cover ;
     height: 100vh ;
+    width: auto;
     display: flex ;
     justify-content: center;
     align-items: center;
